# presto-edit

./: Cargo.toml  lol  readme.md
src/: bind.rs  buffer.rs  data.rs  drawer.rs  event.rs  highlight.rs  logging.rs  lsp.rs  main.rs  math.rs  script.rs  status.rs
src/assets/: default_config.pe
src/buffer/: empty.rs  file.rs  hex.rs  hl.rs  logview.rs  mod.rs  split.rs  tabbed.rs  tree.rs
src/buffers/: empty.rs  file.rs  hex.rs  hl.rs  split.rs  tabbed.rs  tree.rs
src/drawer/: cli.rs  gl.rs  gui.rs  helpers.rs  mod.rs
src/drawers/: cli.rs  gl.rs  gui.rs  helpers.rs
