[package]
name = "prestoedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7.0"
clap = { version = "4.0", features = ["derive"] }

[dependencies.crossterm]
version = "0.26"
features = ["event-stream"] 
