[package]
name = "prestoedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7.0"
clap = { version = "4.0", features = ["derive"] }
glfw = "0.54.0"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"] }
freetype-rs = "0.34.0"
json = "0.12.4"

[dependencies.crossterm]
version = "0.26"
features = ["event-stream"] 

